[package]
name = "csv-sanity"
version = "0.1.0"
description = """
Sanitize and transform large CSVs with millions of records quickly and efficiently.
"""
readme = "README.md"
repository = "https://github.com/mgeorgehansen/csv-sanity"
keywords = ["csv"]
categories = ["command-line-utilities", "text-processing"]
authors = ["M. George Hansen <technopolitica@gmail.com>"]
license = "MPL-2.0"
maintenance = { status = "passively-maintained" }

[dependencies]
csv = "0.15.0"
clap = "2.23.3"
log = "0.3.7"
regex = "0.2.1"
lazy_static = "0.2.8"
unicode-segmentation = "1.1.0"
time = "0.1.37"
maplit = "0.1.4"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
custom_derive = "0.1.7"
newtype_derive = "0.1.6"
rustc-serialize = "0.3"
